Bug 137104 - Headings formatted in tables should not pass Accessibility Check.
Summary: Headings formatted in tables should not pass Accessibility Check.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Ivan
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-28 17:13 UTC by Ivan
Modified: 2020-10-24 16:45 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example. (10.29 KB, application/vnd.oasis.opendocument.text)
2020-09-28 17:13 UTC, Ivan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ivan 2020-09-28 17:13:11 UTC
Created attachment 165927 [details]
Example.

Tables' content should not be formatted as headings, as heading marks are significant for PDF assistive technologies, so Accessibility Check should warn of suck situations.
Comment 1 Ivan 2020-09-28 17:14:01 UTC
Such*
Comment 2 Commit Notification 2020-09-30 10:06:54 UTC
Ivan Stefanenko committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/528cc99c57fa90a08c92e8bf654a0efee8ecf39f

tdf#137104	Added a check for headings in tables

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.