tdf#137104	Added a check for headings in tables

New check checks if a node is a heading and if it is in a table.

Change-Id: I53938ddb57573f80c7823b05bff2d1dd2cee1b8c